--- a/index.html
+++ b/index.html
@@ -4,34 +4,95 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>HVAC Zoning & Dehumid — Reference</title>
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600&family=Archivo+Narrow:wght@600&display=swap" rel="stylesheet">
 <style>
-:root{
-  --bg:#0b1220; --card:#0f1830; --ink:#e8eefc; --muted:#9bb0d6; --accent:#7aa2ff; --good:#6ee7a1; --warn:#fcd34d; --bad:#fca5a5;
+:root {
+  /* --- Core palette (blueprint theme) --- */
+  --cb-bg-900: #212931;   /* deep blue-grey background */
+  --cb-bg-800: #252E35;   /* slightly lighter panel fill */
+  --cb-ink:     #E7EFE4;   /* primary line/text: pale mint-white */
+  --cb-ink-2:   #CFDAD0;   /* secondary line/text */
+  --cb-grid:    #5C6668;   /* grid/annotation lines */
+  --cb-muted:   #98A5A3;   /* muted labels */
+  --cb-edge:    #8C9698;   /* panel edges / dividers */
+  --cb-alert:   #CD2730;   /* red markers/dots */
+  --cb-alert-2: #Bf2F36;   /* darker red, hover/active */
+  --cb-accent:  #7aa2ff;   /* blue accent */
+  --cb-good:    #6ee7a1;   /* green accent */
+  --cb-warn:    #fcd34d;   /* yellow accent */
+
+  /* --- Strokes --- */
+  --cb-stroke-1: 1px;
+  --cb-stroke-2: 2px;
+  --cb-round: 2px;
+
+  /* --- Typography --- */
+  --cb-font-ui: 'IBM Plex Mono', ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
+  --cb-font-head: 'Archivo Narrow', system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+  --cb-tt: uppercase;
+  --cb-track-tight: 0.04em;
+  --cb-track-wide: 0.08em;
+
+  /* --- Shadows --- */
+  --cb-glow: 0 0 0.5px rgba(231,239,228,.55), 0 0 2px rgba(231,239,228,.18);
 }
+
 *{box-sizing:border-box}
-html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Arial,sans-serif}
-a{color:var(--accent);text-decoration:none}
-a:hover{text-decoration:underline}
-.container{max-width:980px;margin:0 auto;padding:32px}
+html,body{margin:0;padding:0;background:var(--cb-bg-900);color:var(--cb-ink);font-family:var(--cb-font-ui);letter-spacing:var(--cb-track-tight);line-height:1.35;text-rendering:geometricPrecision}
+a{color:var(--cb-ink);text-decoration:none;border-bottom:var(--cb-stroke-1) solid var(--cb-muted)}
+a:hover{color:var(--cb-alert);border-color:var(--cb-alert)}
+.container{max-width:1600px;margin:0 auto;padding:32px}
 .nav{display:flex;flex-wrap:wrap;gap:12px;margin-bottom:24px}
-.nav a{background:var(--card);padding:10px 14px;border-radius:12px;border:1px solid #223;box-shadow:0 4px 20px rgba(0,0,0,.25)}
-.card{background:var(--card);border:1px solid #223;border-radius:16px;padding:20px;margin:16px 0;box-shadow:0 8px 40px rgba(0,0,0,.35)}
-h1{font-size:28px;margin:.2em 0 0.2em}
-h2{font-size:22px;margin:1.2em 0 .4em}
-h3{font-size:18px;margin:1em 0 .4em}
-code,kbd{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace;background:#0b1328;padding:2px 6px;border-radius:6px;border:1px solid #223}
-pre{background:#0b1328;border:1px solid #223;border-radius:12px;padding:14px;overflow:auto}
-.table{width:100%;border-collapse:collapse;background:#0b1328;border-radius:12px;overflow:hidden;margin:10px 0}
-.table th,.table td{padding:10px;border-bottom:1px solid #223}
-.badge{display:inline-block;padding:2px 8px;border-radius:999px;font-size:12px;border:1px solid #223;background:#0b1328;color:var(--muted)}
-.kv{display:grid;grid-template-columns:200px 1fr;gap:8px}
-.hr{height:1px;background:#223;margin:16px 0}
-.note{color:var(--muted)}
-.callout{border-left:4px solid var(--accent);padding:10px 12px;background:#0b1328;border-radius:8px}
-.ok{color:var(--good)} .warn{color:var(--warn)} .bad{color:var(--bad)}
-.btn{display:inline-block;background:var(--accent);color:#081020;padding:10px 14px;border-radius:10px;font-weight:600}
-svg{max-width:100%;height:auto;display:block;background:#0b1328;border-radius:12px;border:1px solid #223;padding:10px}
-.footer{margin-top:32px;font-size:13px;color:var(--muted)}
+.nav a{
+  background:var(--cb-bg-800);
+  padding:10px 14px;
+  border-radius:0;
+  border:var(--cb-stroke-2) solid var(--cb-edge);
+  box-shadow:inset 0 0 0 var(--cb-stroke-1) var(--cb-grid);
+  color:var(--cb-ink-2);
+  text-transform:var(--cb-tt);
+  letter-spacing:var(--cb-track-wide);
+  font-weight:600;
+  font-size:0.82rem;
+  border-bottom:none;
+  transition:all 0.15s ease;
+}
+.nav a:hover{
+  border-color:var(--cb-alert);
+  color:var(--cb-alert);
+  box-shadow:var(--cb-glow);
+}
+.nav a[style*="font-weight: 700"]{
+  border-color:var(--cb-ink);
+  color:var(--cb-ink);
+}
+.card{
+  background:var(--cb-bg-800);
+  border:var(--cb-stroke-2) solid var(--cb-edge);
+  box-shadow:inset 0 0 0 var(--cb-stroke-1) var(--cb-grid);
+  border-radius:0;
+  padding:20px;
+  margin:16px 0;
+}
+h1{
+  font-family:var(--cb-font-head);
+  text-transform:var(--cb-tt);
+  letter-spacing:var(--cb-track-wide);
+  font-weight:600;
+  font-size:28px;
+  margin:.2em 0 0.2em;
+}
+h2{
+  font-family:var(--cb-font-head);
+  text-transform:var(--cb-tt);
+  letter-spacing:var(--cb-track-wide);
+  font-weight:600;
+  font-size:22px;
+  margin:1.2em 0 .4em;
+}
+ul{color:var(--cb-ink-2);line-height:1.6}
+.note{color:var(--cb-muted);font-size:.82rem;letter-spacing:var(--cb-track-tight)}
+.footer{margin-top:32px;font-size:13px;color:var(--cb-muted)}
 </style>
 </head>
 <body>
@@ -39,6 +100,7 @@ svg{max-width:100%;height:auto;display:block;background:#0b1328;border-radius:12
   <h1>HVAC Zoning & Dehumid — Reference (BMPLUS‑3000 + Ecobee + GeneralAire)</h1>
   <p class="note">Quick reference site for your setup: two zones, Rheem RP14 + propane aux, GeneralAire dehumidifier (D1/D2), Ecobee Enhanced (Zone 1) & Premium (Zone 2).</p>
   <nav class="nav">
+    <a href="wiring-flow.html" style="background: linear-gradient(135deg, #0f1830, #7aa2ff); border: 2px solid #7aa2ff; font-weight: 700;">⚡ HVAC System Diagram</a>
     <a href="wiring-bmplus3000-ecobee-dehumid.html">Wiring: BMPLUS-3000 ↔ Ecobee ↔ Dehumid (Zone 2 only)</a>
     <a href="power-stability-ups-transformer.html">Power Stability: UPS + Dedicated 24VAC Transformer</a>
     <a href="troubleshooting-flowchart.html">Troubleshooting Flowchart</a>
