added manuals and cleaned up pages

--- a/index.html
+++ b/index.html
@@ -97,28 +97,26 @@ ul{color:var(--cb-ink-2);line-height:1.6}
 </head>
 <body>
 <div class="container">
-  <h1>HVAC Zoning & Dehumid — Reference (BMPLUS‑3000 + Ecobee + GeneralAire)</h1>
-  <p class="note">Quick reference site for your setup: two zones, Rheem RP14 + propane aux, GeneralAire dehumidifier (D1/D2), Ecobee Enhanced (Zone 1) & Premium (Zone 2).</p>
-  <nav class="nav">
+  <h1>HVAC Schematics</h1>
+  <p class="note">Equipment reference: Two zones, Rheem RP14 + propane aux, GeneralAire dehumidifier (D1/D2), Ecobee Enhanced (Zone 1) & Premium (Zone 2).</p>
+    <nav class="nav">
     <a href="wiring-flow.html" style="background: linear-gradient(135deg, #0f1830, #7aa2ff); border: 2px solid #7aa2ff; font-weight: 700;">⚡ HVAC System Diagram</a>
-    <a href="wiring-bmplus3000-ecobee-dehumid.html">Wiring: BMPLUS-3000 ↔ Ecobee ↔ Dehumid (Zone 2 only)</a>
-    <a href="power-stability-ups-transformer.html">Power Stability: UPS + Dedicated 24VAC Transformer</a>
-    <a href="troubleshooting-flowchart.html">Troubleshooting Flowchart</a>
-    <a href="damper-identification.html">Damper Identification (M1/M2/M4/M6)</a>
+    <a href="ecobee-setup.html">Ecobee Setup & Settings</a>
+    <a href="system-information.html">System Information & Operation</a>
+    <a href="manuals.html">📚 Equipment Manuals</a>
   </nav>
 
   <div class="card">
     <h2>What’s inside</h2>
     <ul>
-      <li>Clean wiring maps with SVG diagrams</li>
-      <li>Exact terminal mappings for Ecobee, BMPLUS‑3000, GeneralAire (D1/D2)</li>
+      <li>Terminal mappings for Ecobee, BMPLUS‑3000, GeneralAire</li>
       <li>Zone‑2‑only dehumidification logic with damper overrides</li>
       <li>Brownout resilience plan (small UPS + dedicated control transformer)</li>
       <li>Step‑by‑step troubleshooting</li>
     </ul>
   </div>
 
-  <div class="footer">Generated for your GitHub Pages. You can rename files as needed.</div>
+  <!-- <div class="footer"></div> -->
 </div>
 <script>
 document.querySelectorAll('[data-toggle]').forEach(btn=>{
