--- a/wiring-flow.html
+++ b/wiring-flow.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="container">
-  <h1>HVAC Wiring — React Flow with Multiple Handles</h1>
+  <h1>HVAC Wiring</h1>
   <p><a class="btn" href="index.html">Back</a></p>
   <div class="card">
     <h2>Full System Schematic</h2>
